--- a/style.css
+++ b/style.css
@@ -1,387 +1,334 @@
 :root{
-	--color_black: rgba(51, 51, 51, 0.815);
-	--color_red: #DF2027;
-	--color_grey:rgb(155, 157, 163);
-	--line_grey:rgba(183, 183, 185, 0.596);
-	--bg_grey: #F1F0ED;
+	--bg_lightgrey:#F8F8F7;
+	--border_grey:#e2e2e2;
+	--grey:#cfcfcf;
+	--red: #FB4148;
+	--blue: #1C2957;
+	--mint: #F3F7FA;	
+	--yellow: #F7C51E;	
 }
 *{
 	box-sizing: border-box;
-	font-family: "Helvetica", Arial, sans-serif;
+	font-family: "Helvetica", sans-serif, Arial;	
+	color: var(--blue);
 	text-decoration: none;
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
-}
-hr{
-	border: none;
-	background-color:var(--line_grey);
-	height: 1px;
+	line-height: 25px;
 }
 body{
-	background: var(--bg_grey);
+	background: var(--bg_lightgrey);
+}	
+* .icon{
+	width: 16px;
+	height: 16px;
+	fill: var(--blue);
 }
-
-
-/*---DESKTOP---*/
-@media (min-width: 1300px) and (max-width: 1450px){
-
-/*HEADER*/
-			.headerMob{
-				display: none;
-			}
-			.header{
-				height: 55px;
-				display: flex;
-				align-items: center;
-				justify-content: flex-start;
-				background: #333;
-			}
-			.headerLogo{
-				width: 60px;
-				display: flex;
-				justify-content: center;
-				margin-left: 60px;
-			}
-			.menuContent{
-				margin-left: 25px;
-				margin-right: 60px;
-				display: flex;
-				justify-content: space-between;
-				width: 100%;
-			}
-			.headerMenu,
-			.headerSocialMenu{
-				display: flex;
-			}
-			.headerMenu a,
-			.headerMenu a:visited,
-			.headerMenu a:active{
-				color: white;	
-			}
-			.headerSocialMenu a,
-			.headerSocialMenu a:visited,
-			.headerSocialMenu a:active{
-				color: var(--color_grey);	
-				font-weight: bold;
-				font-size: 1.1em;
-			}
-			.header li{
-				margin-right: 40px;
-				font-size: 15px;
-				font-weight: bold;
-				letter-spacing: 1px;
-			}
-			.header li:last-child{
-				margin-right: 0;
-			}
-			.headerMenu .calendar{
-				color: var(--color_red);
-				font-size: 1.1em;
-			}			
-			.logo:focus,
-			.logo:hover{
-				border: none;
-			}
-
-/*MAIN*/
-		main{
-			width: 1200px;
-			margin: 60px;
-			display: flex;
-			color: var(--color_grey);
-		}
-		.eventPage{
-			width: 800px;	
-			height: 700px;
-			background: white;
-			padding: 25px;
-		}
-		.titleEventPage strong{
-			font-size: 1.7em;
-			font-weight: normal;
-			color:var(--color_grey);
-			letter-spacing: 1px;
-		}
-/*HEADER EventPage*/
-		.headerEventPage{
-			display: flex;
-			justify-content: space-between;
-			margin-top: 60px;
-		}
-		.infoEvent{
-			width: 420px;
-			height: 190px;
-			display: flex;
-			flex-direction: column;
-			justify-content: space-between;
-		}
-		.infoEventItem{
-			font-size: 14px;
-			padding-right: 10px;
-			letter-spacing: 1px;
-			line-height: 12px;
-		}
-		button{
-			width: 180px;
-			height: 30px;
-			background: var(--bg_grey);
-			border: none;
-			color: var(--color_grey);
-			font-size: 16px;
-
-		}
-		.videoEvent{
-			width: 320px;
-		}
-
-/*MAIN EventPage*/
-
-/*OHTER CHAPTERS*/
-		.otherChapters{
-			width: 300px;
-			background: #fff;
-			margin-left: 60px;
-		}
-		.titleotherChapters{
-			display: flex;
-			justify-content: space-between;
-			padding: 25px;
-		}
-		.titleotherChapters strong{
-			font-size: 1.7em;
-			font-weight: normal;
-			color:var(--color_grey);
-			letter-spacing: 1px;
-		}
-		.otherChapters .item{
-			height: 30px;
-			padding: 0 25px ;
-			font-size: .85em;
-			color: var(--color_grey);
-			text-decoration-line: underline;
-		}
-	footer{
-		background: #000;
-		margin-top: 20px;
-		color: var(--main-color_);
-		border-top: 10px solid var(--main-color_red);
-	}
-	.topFooter{
-		background: var(--main-color_grey);
-		display: flex;
-		color:#fff;
-		padding: 20px 10px;
-	}
-	.topFooter .footerSection{
-		margin-right: 250px;
-	}
-
-	}
-
-
-/*---MOBILE---*/
-@media (min-width: 320px) and (max-width: 640px){
-	
-.container{
-	padding: 5px;
-}
-.header{
-  display: none;
-}
-	.headerMob{
-		height: 200px;
-		font-size: 15px;
-		background: var(--color_red);
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-	}
-	.headerTop{
-		display: flex;
-		justify-content: space-between;
-	}
-	
-/* FILTERS */
-	.headerBottom{
-	
-	}
-	.filterMenu{
-		display: flex;
-		flex-direction: column;
-		
-	}
-	.filterItem{
-		width: 100%;
-		margin: 0 auto;
-		padding: 0 5px 10px ;
-		color: var(--color_grey);
-	}
-	select{
-		height: 25px;
-		font-size: 15px;
-		text-transform: uppercase;
-		width: 100%;
-		color: var(--main-color);
-		background: #fff;
-		font-weight: 700;
-	}
-.mainPicDesctop{
+/*SPONSOR MOB*/
+.sponsorLogoMob,
+.sponsorLogoDesktop{
 	display: none;
+	align-items: center;
+	padding: 20px 10px ;	
 }
-
-/* MAIN */
-main{
-   display: flex;
-	 flex-direction: column;
-	 color: var(--color_grey);
- }
- .titleEventPage{
-	margin: 20px 0;
- }
- .titleEventPage strong{
-	font-size: 19px;
+.sponsorLogoMob .sponsorIcon{
+	fill:#E31E24;
+	height: 45px;
+	margin-right: 30px;
+}
+.sponsorLogoMob .sponsorContent{
+	font-size: 14px;
+}
+.sponsorLogoMob .sponsorTitle{
+	color: #E31E24;
 	font-weight: bold;
-	color:var(--color_grey);
-	
 }
-	.filterMenu{
+/*SPONSOR DESCKTOP*/
+.sponsorLogoDesktop .sponsorIcon{
+	fill:#E31E24;
+	height: 50px;
+	margin-right: 20px;
+}
+ .sponsorIcon,
+ .sponsorContent p{
+	color: #E31E24;
+	font-weight: bold;
+}
+
+
+/*MODAL*/
+		.modal{
+			position: fixed;
+			background: #fff;
+			box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.082);
+		}
+		.modalClose{
+			background: #fff;
+			border: none;
+		}
+		.modalFilter{
+			top: 135px;
+			left: 50%;
+
+			width: 610px;
+			height: 300px;
+			margin-left: -480px;
+			padding: 10px 10px;
+		}
+		.modal .filterHeader{
+			display: flex;
+			flex-direction: row-reverse;
+			justify-content: space-between;
+		}
+
+	
+/*- DESKTOP -*/
+@media (min-width: 1020px) and (max-width: 1450px){	
+	.container{
+		font-size: 14px;		
+	}
+	.sponsorLogoMob{
 		display: none;
 	}
-/*HEADER EventPage*/
-	.headerEventPage{
-		
-	}
-	.infoEvent{
-		height: 120px;
+	/*HEADER*/
+	header{
 		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-		margin: 20px 0;
-	}
-	.infoEventItem{
-		font-size: 14px;
-		padding-right: 10px;
-		letter-spacing: 1px;
-		line-height: 12px;
-	}
-	button{
-		width: 180px;
-		height: 30px;
-		background:#fff;
-		border: 1px solid var(--color_grey);
-		color: var(--color_grey);
-		font-size: 18px;
-
-	}
-	.videoEvent{
-		width: 320px;
-	}
-
-	
-
-	
-/*--OTHER SECTION--*/
-.otherChapters{
-	display: none;
-}
- 
-footer{
-	border-top: 3px solid var(--color_red);
-	color: var(--color_grey);
-	margin: 20px 0;
-	background: #333;
-	
-}
-.topFooter{
-	display: flex;
-}
-}
-
-
-
-/*---TABLET---*/
-@media (min-width: 640px) and (max-width: 1020px){
-	.headerMob{
-		display: none;
-	}
-	.header{
-		display: flex;
-		align-items: center;
-		justify-content: flex-start;
-	}
-	header .headerSocialMenu,
-	header .logo,
-	header .headerMenu{
-  width: 33%;
-  
-}
-	.header .logo img{
-		width: 120px;
-		margin: 5px 0 0 5px;
+		justify-content: space-between;		
+		width: 100%;
+		font-size: 14px;	
+		background-color: var(--blue);
+		padding: 15px 40px;
+	}	
+	.headerLogo svg{
+		height: 45px;
+		margin: 0 auto;
+		width: 200px;
+	}	
+	.headerLogo{
+		width: 200px;
+		height: 100%;
 	}
 	.headerMenu{
 		display: flex;
-		justify-content: space-between;
+		justify-content: space-between;	
+		width: 400px;	
+		align-items: bottom;
+		height: 100%;
+		margin-top: 20px;
 	}
-	.headerSocialMenu{
-		display: flex;
-		justify-content: flex-end;
-	}
-	.headerSocialMenu a{
-		margin-right: 5px;
-	}
-
-	.title{
-		display: none;
-	}
-
-	/*---MAIN---*/
-	
-	.sponsorsLogoMob{
-		display: none;
-	}
-	 .sponsorsLogo{
-		 display: flex;
-		 overflow: scroll;
-	 }
-	 .sponsorsLogo img{
-		 width: 97%;
-		 margin-top: 5px;
-	 }
-
-	
-
-	/*Nav*/	
-	
-	
-
-	/*Filters*/
-	.filterMenu{
-		display: flex;
-		justify-content: space-between;
-		margin: 10px 5px;
-		color: var(--main-color_white);
-	}
-	.filterItem{
-		width: 33%;
-		display: flex;
-	}
-	select{
-		color: var(--main-color);
-		font-weight: bolder;
-		width: 50%;
+	.headerMenu a,
+	.headerMenu a:visited,
+	.headerMenu a:active{
+		border-bottom: none;
 		text-transform: uppercase;
+		color: #fff;
+		letter-spacing: .7px;	
+}
+	
+	.locationContent svg{
+		fill: var(--blue);
 	}
-	label{
-		margin-right: 5px;
+	h2{
+		font-size: 16px;
 	}
 
-	/*--EVENT--*/
+/*MAIN*/
+	main{
+		width: 950px;
+		margin: 0 auto;
+		padding: 40px 0;
+		display: flex;
+		justify-content: space-between;
+	}
+	.contentSection{
+		width: 600px;		
+	}	
+/*RIGHT SECTION*/
+.otherSide{
+	width: 300px;
+	background-color: #fff;
+}
+.otherSide	.itemSection {
+	padding: 10px 0 5px 0;
+}
+		.itemSection .item{
+			display: flex;
+			align-items: center;
+			padding: 0 20px;
+		}			
+	/*quickNavigation*/
+	.quickNavigation{
+		margin-top: 10px;
+	}
+	.quickNavigation h2{
+		margin: 0 20px 10px;
+		text-align: center;
+		background-color: var(--border_grey);
+		border-radius:  20px;
+	}
+	.quickNavigation .item{
+		margin-bottom: 15px;
+	}
+	.quickNavigation .descriptionContent{
+		font-size: 12px;
+		line-height: 15px;
+		letter-spacing: .050em;
+	}		
+	.quickNavigation svg{
+		fill:var(--grey);
+		width: 18px;
+		height: 18px;
+	}			
+}
 
+/*- TABLET -*/
+@media (min-width: 640px) and (max-width: 1020px){
+	body{
+		background: var(--bg_lightgrey);
+	}
+	.sponsorLogoMob{
+		display: none;
+	}	
+	.sponsorContent{
+		font-size: 14px;
+	}
+	.container{
+		font-size: 17px;
+	}
+	h2{
+		font-size: 20px;
+		font-weight: bold;
+	}
+	/*HEADER*/
+	header{
+		display: flex;
+		justify-content: space-between;		
+		width: 100%;
+		font-size: 14px;	
+		background-color: var(--blue);
+		padding: 15px 5px;
+	}	
+	.headerLogo svg{
+		height: 45px;
+		margin: 0 auto;
+		width: 200px;
+	}	
+	.headerLogo{
+		width: 200px;
+		height: 100%;
+	}
+	.headerMenu{
+		display: flex;
+		justify-content: space-between;	
+		width: 400px;	
+		align-items: bottom;
+		height: 100%;
+		margin-top: 20px;
+	}
+	.headerMenu a,
+	.headerMenu a:visited,
+	.headerMenu a:active{
+		border-bottom: none;
+		text-transform: uppercase;
+		color: #fff;
+		letter-spacing: .7px;	
+}
+/*MAIN*/
+	main{
+		margin: 30px 10px;
+		display: flex;
+	}
+	.contentSection{
+		width: 62%;
+	}			
+	
+	/*RIGHT SECTION*/
+.otherSide{
+	width: 38%;
+	font-size: 16px;
+	min-width: 280px;
+	background-color: #fff;
 
-footer{
-	margin: 20px 0;
-	color: var(--main-color);
+}
+.otherSide	.itemSection {
+	padding: 10px 0 5px 0;
+}
+		.itemSection .item{
+			display: flex;
+			align-items: center;
+			padding: 0 20px;
+		}	
+		.itemSection p{
+			width: 95%;
+			overflow: hidden; 
+			white-space: nowrap; 
+			text-overflow: ellipsis; 
+		}		
+	/*quickNavigation*/
+	.quickNavigation{
+		margin-top: 10px;
+	}
+	.quickNavigation h2{
+		margin: 0 20px 10px;
+		text-align: center;
+		background-color: var(--border_grey);
+		border-radius:  20px;
+
+	}
+	.quickNavigation .item{
+		margin-bottom: 15px;
+	}
+	.quickNavigation .descriptionContent{
+		font-size: 12px;
+		line-height: 15px;
+		letter-spacing: .050em;
+	}		
+	.quickNavigation svg{
+		fill:var(--grey);
+		width: 18px;
+		height: 18px;
+	}
+		
+}
+
+/*- MOBILE -*/
+@media (min-width: 320px) and (max-width: 640px){
+	.sponsorLogoDesktop{
+		display: none;
+	}
+	header{
+		width: 100%;
+		font-size: 16px;	
+		background-color: var(--blue);
+		padding: 15px 10px;		
+	}	
+	.headerLogo svg{
+		height: 45px;
+		margin: 0 auto;
+		width: 200px;
+	}	
+	.headerLogo{
+		width: 200px;
+		height: 60px;
+		margin: 0 auto;
+	}
+	.headerMenu{
+		display: flex;
+		justify-content: space-between;				
+	}
+	.headerMenu a,
+	.headerMenu a:visited,
+	.headerMenu a:active{
+		border-bottom: none;
+		text-transform: uppercase;
+		color: #fff;
+		letter-spacing: .7px;
+}
+.anotheHeaderItem{
+	display: none;
+}
+.anotheHeaderIcon svg{
+	fill: #fff;
 }
 }
